--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,40 @@
 POSTGRES_PRISMA_URL=""
 POSTGRES_URL_NON_POOLING=""
 
-# AI Provider (Example for OpenAI, adapt for Gemini/Claude etc.)
-# You can get your key from https://platform.openai.com/account/api-keys
-OPENAI_API_KEY=""
 
 # NextAuth.js (if you add authentication)
 # You can generate a secret with openssl rand -base64 32
 # AUTH_SECRET=""
+
+# --- General ---
+# API_PREFIX and CORS_ORIGINS can typically remain at their defaults or be adjusted if needed for your local setup.
+API_PREFIX="/api/v1"
+CORS_ORIGINS="http://localhost:5173" # Frontend runs on port 5173 with Vite
+
+# Database Configuration
+#DATABASE_URL=postgresql://postgres:podcastuser@localhost:5432/
+#DEV_DATABASE_URL=postgresql://postgres:podcastuser@localhost:5432/
+#TEST_DATABASE_URL=postgresql://postgres:podcastuser@localhost:5432/
+
+# Environment Configuration
+ENVIRONMENT=development
+
+# --- Storage Configuration (MinIO - local development emulator) ---
+STORAGE_PROVIDER="minio"
+MINIO_ENDPOINT_URL="http://localhost:9000"
+MINIO_ACCESS_KEY="minioadmin"
+MINIO_SECRET_KEY="minioadminpass"
+MINIO_BUCKET_NAME= 
+MINIO_USE_SSL=False
+
+
+
+VITE_BACKEND_URL=http://localhost:8000/api/v1
+
+
+# AI Provider (Example for OpenAI, adapt for Gemini/Claude etc.)
+# You can get your key from https://platform.openai.com/account/api-keys
+OPENAI_API_KEY="YOUR_API_KEY_HERE"
+GEMINI_API_KEY="YOUR_API_KEY_HERE"
+HUGGINGFACE_TOKEN="YOUR_API_KEY_HERE"
+HF_TOKEN="YOUR_API_KEY_HERE"
