--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
   },
   "dependencies": {
     "@prisma/client": "^5.15.0",
+    "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.0.2",
-    "@vercel/ai": "^3.1.26",
     "ai": "^3.1.26",
-    "class-variance-authority": "^0.7.0",
+    "autoprefixer": "^10.4.21",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.394.0",
     "next": "14.2.3",
+    "openai": "^4.28.0",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
