--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^5.15.0",
     "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@types/d3": "^7.4.3",
     "ai": "^3.1.26",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.394.0",
     "next": "14.2.3",
