Commit all changes

--- a/.env.example
+++ b/.env.example
@@ -6,19 +6,21 @@ POSTGRES_PRISMA_URL=""
 POSTGRES_URL_NON_POOLING=""
 
 
-# NextAuth.js (if you add authentication)
+# NextAuth.js Authentication
 # You can generate a secret with openssl rand -base64 32
-# AUTH_SECRET=""
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET=""
+
+# OAuth Providers
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+GITHUB_ID=""
+GITHUB_SECRET=""
 
 # --- General ---
 # API_PREFIX and CORS_ORIGINS can typically remain at their defaults or be adjusted if needed for your local setup.
 API_PREFIX="/api/v1"
 CORS_ORIGINS="http://localhost:5173" # Frontend runs on port 5173 with Vite
-
-# Database Configuration
-#DATABASE_URL=postgresql://postgres:podcastuser@localhost:5432/
-#DEV_DATABASE_URL=postgresql://postgres:podcastuser@localhost:5432/
-#TEST_DATABASE_URL=postgresql://postgres:podcastuser@localhost:5432/
 
 # Environment Configuration
 ENVIRONMENT=development
