--- a/package.json
+++ b/package.json
@@ -26,12 +26,18 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/crypto-js": "^4.2.2",
     "@types/d3": "^7.4.3",
+    "@types/qrcode": "^1.5.5",
+    "@types/speakeasy": "^2.0.10",
     "ai": "^3.1.26",
     "autoprefixer": "^10.4.21",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "d3": "^7.9.0",
     "express-rate-limit": "^7.5.1",
     "framer-motion": "^11.2.10",
@@ -41,6 +47,7 @@
     "next-auth": "^4.24.11",
     "next-rate-limit": "^0.0.3",
     "openai": "^4.28.0",
+    "qrcode": "^1.5.4",
     "react": "^18",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -48,6 +55,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-window": "^1.8.11",
     "react-window-infinite-loader": "^1.0.10",
+    "speakeasy": "^2.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.25.76",
