--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@types/bcryptjs": "^2.4.6",
     "@types/crypto-js": "^4.2.2",
     "@types/d3": "^7.4.3",
     "@types/qrcode": "^1.5.5",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/speakeasy": "^2.0.10",
     "ai": "^3.1.26",
     "autoprefixer": "^10.4.21",
@@ -49,6 +51,7 @@
     "openai": "^4.28.0",
     "qrcode": "^1.5.4",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
